dataset1235/2025-2/1153765216/users/4118477972/executions/2814675586_2403290319.log
== SUBMISSION (2025-08-26 18:13:19)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = float(input("quantos":))

custo_total = preco * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 2
    quantidade = float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 2
    quantidade = float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 2
    quantidade = float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 2
    quantidade = float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 2
    quantidade = float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 2
    quantidade = float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:12:11)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = int(input("quantos":))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:13:34)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = int(input("quantos":))

custo_total = preco * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:06:38)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = Float(input("qual a quantidade":))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("qual a quantidade":))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("qual a quantidade":))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("qual a quantidade":))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("qual a quantidade":))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("qual a quantidade":))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("qual a quantidade":))
                                                ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:14:11)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = int(input("quantos":))

custo_total = preco * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:14:27)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = int(input())

custo_total = preco * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
qual o valor:2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
qual o valor:450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
qual o valor:662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
qual o valor:77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
qual o valor:122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
qual o valor:350.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:12:32)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = float(input("quantos":))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 2
    quantidade = float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 2
    quantidade = float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 2
    quantidade = float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 2
    quantidade = float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 2
    quantidade = float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 2
    quantidade = float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:07:00)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = Float(input("quantos":))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("quantos":))
                                      ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:14:16)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = int(input("quantos":))

custo_total = preco * quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:07:24)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = int(input("quantos":))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input("quantos":))
                                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:05:00)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
qual o valor:2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
qual o valor:55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
qual o valor:76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
qual o valor:40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
qual o valor:123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
qual o valor:91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:05:39)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = int(input(qual a quantidade:))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 2
    quantidade = int(input(qual a quantidade:))
                           ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input(qual a quantidade:))
                           ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input(qual a quantidade:))
                           ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input(qual a quantidade:))
                           ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 2
    quantidade = int(input(qual a quantidade:))
                           ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 2
    quantidade = int(input(qual a quantidade:))
                           ^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:06:19)
-- CODE: 
preco = float(input("qual o valor:"))
quantidade = Float(input("qual a quantidade":))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("qual a quantidade":))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("qual a quantidade":))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("qual a quantidade":))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("qual a quantidade":))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("qual a quantidade":))
                                                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 2
    quantidade = Float(input("qual a quantidade":))
                                                ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
